# NSU-Second-Year

./: README.md
EVM/: .gitignore
EVM/lab1/: .editorconfig  CMakeLists.txt  README.md  main.c
EVM/lab5/: CMakeLists.txt  README.md  main.cpp
EVM/lab6/: CMakeLists.txt  README.md  main.cpp
EVM/lab7/: BLAS  BLAS.c  CMakeLists.txt  README.md  default  default.c  vectorized  vectorized.c
EVM/lab8/: CMakeLists.txt  README.md  main.cpp
Network Technology/DoH for Cluster/: README.md  build.gradle  settings.gradle.kts
OOP on C++/: .gitignore
OOP on C++/lab0 (Intro)/: CMakeLists.txt  README.md  main.cpp
OOP on C++/lab1 (Circular Buffer)/: CMakeLists.txt  CircularBuffer.cpp  CircularBuffer.h  README.md  main.cpp  test_cb.cpp
OOP on C++/lab2 (Game of life)/: CMakeLists.txt  Cell.h  Coordinate.h  Field.cpp  Field.h  GameController.cpp  GameController.h  GameModel.cpp  GameModel.h  GameView.cpp  GameView.h  README.md  Size.h  main.cpp
OOP on C++/lab3 (Sound Processor)/: CMakeLists.txt  Conventer.h  ExecutionOfInstruction.cpp  ExecutionOfInstruction.h  Inverse.cpp  Inverse.h  MixConventer.cpp  MixConventer.h  MuteConventer.cpp  MuteConventer.h  README.md  WAV.cpp  WAV.h  factory.cpp  factory.h  main.cpp
OOP on C++/lab4 (templates)/: README.md  main.cpp  parser.h  tuple.h
OOP on Java/lab1/: README.md  build.gradle
OOP on Java/lab2/: README.md  build.gradle  input.txt
OOP on Java/lab3/: README.md  build.gradle
OOP on Java/lab4/: .gitignore  README.md  build.gradle
OOP on Java/lab5/: README.md
OOP on Java/lab5 advanced (messenger)/serializationVersion/: README.md
Operations System/lab1/: README.md
Operations System/lab1/lab1.2/: CMakeLists.txt  hello  hello_lib_static.c  hello_static.c
Operations System/lab1/lab1.3/: hello_dynamic.c  hello_dynamic_lib.c
Operations System/lab2/: CMakeLists.txt  README.md  asm.asm  index.html  main.c  print.c
Operations System/lab3/: README.md
Operations System/lab3/lab3.1/: main.c
Operations System/lab3/lab3.2/: CMakeLists.txt  help.txt  main.c  print_file  program
Operations System/lab4/: CMakeLists.txt  README.md
Operations System/lab4/lab4.1/: CMakeLists.txt  lab4.1a  lab4.1a.c  lab4.1d  lab4.1d.c  lab4.1e  lab4.1e.c  lab4.1g  (+1 more)
Operations System/lab5/: CMakeLists.txt  lab5.1  lab5.1.c  lab5.2  lab5.2.1  lab5.2.1.c  lab5.2.c
Operations System/lab7/: README.md
Parallel Programming/lab1/: CMakeLists.txt  MPI.cpp  MPI2.cpp  main.cpp  отчет_лаб1_Лаухин_23210.docx
Parallel Programming/lab2/: CMakeLists.txt  OpenMP1.cpp  OpenMP2.cpp  OpenMPWithSchelude.cpp  main.cpp  отчет_лаб2_Лаухин_23210.docx
Parallel Programming/lab3/: main.cpp  parallel_lab3_2020.pdf:Zone.Identifier  отчет_лаб3_Лаухин_23210.docx
Parallel Programming/lab4/: main.cpp  parallel_lab4_2020.pdf:Zone.Identifier  отчет_лаб4_Лаухин_23210.docx
Parallel Programming/lab5/: CMakeLists.txt  README.md  balanced.cpp  unbalanced.cpp  отчет_лаб5_Лаухин_23210.docx
(+177 files in other folders)
